public_html/static/css/style.css
/* ... */
#tfooter #xaccess a:hover{opacity:0.8;padding:0.5em 2em;margin-right:0;}
.rtl #tfooter #xaccess{right:0;left:initial;}
.rtl #tfooter #xaccess a{right:0;left:initial;margin-right:0;margin-left:2em;}
.rtl #tfooter #xaccess a:hover{margin-right:0;margin-left:0;}

#tfooter .middle .share1 a{display:inline-block;}


.pricingTable{text-align:center;color:#888;font-size:1.2em}
.pricingTable .price .c{font-weight:500;color:#333}
.ltr .pricingTable .c4, .ltr .pricingTable .c12{text-align:left}
.rtl .pricingTable .c4, .rtl .pricingTable .c12{text-align:right;}
.pricingTable sup{font-size:0.6em;padding:0 0.3em;}
.pricingTable small{color:#777;font-size:0.6em;}
body .pc .em{font-weight:bold;text-align:center;padding:1em 5%;background-color:#ddd;}
  /* pricing */
.dtc > div{transition:0.3s;}
.dtc > div > *{padding:1em 1em;}
.dtc > .th{background-color:#e0d7c1;font-weight:700}
.dtc > .gh{font-weight:700;background-color:#d9dddd;margin-top:1em;}
.dtc > .th:hover{background-color:rgba(0,0,0,0.1);}
.dtc > .th.gh:hover{background-color:rgba(0,0,0,0.1)}
.dtc > div:not(.th):hover{background-color:rgba(0,0,0,0.05)}
.dtc > div a{color:#333;transition:0.3s;}
.dtc > div > *{padding:1rem .5rem;}



/*vcard*/
.vcard{font-style:normal;}
.vcard .adr{padding:1em 0}
.vcard .adr div, .vcard .adr span, .vcard .email, .vcard .tel{display:block;padding:0.5em}
.vcard .adr span{display:inline-block;}





[data-page="homepage"] #tfooter .link_home{display:none;}


#factorAdd .cbox{margin-bottom:10px;padding:0.5em}
#factorAdd .tbl{margin:0}
/*final price*/
.priceBox{font-size:1.4em;margin:0 auto 10px;padding:0;border-radius:0.25rem;background-color:#5bbbdb;color:#eee;text-align:center;max-width:400px;min-width:170px;transition:0.3s}
.priceBox h3{font-size:1em;padding:1em;margin:0}
.priceBox div span{font-weight:bold;color:#fff;display:inline-block;}
.priceBox div{transition:0.3s;}
.priceBox div:hover{color:#fff}
.priceBox .final{padding:0;background-color:#50a0c0;color:#fff;font-size:2.5em;margin-bottom:10px;height:70px;}
.priceBox .final span{line-height:70px;}
.priceBox .final abbr{font-size:1rem;display:inline-block;transform: rotate(-90deg);-webkit-transform: rotate(-90deg);-moz-transform: rotate(-90deg);vertical-align:middle;}
.priceBox .desc{padding:0.4em 0.2em;color:#fff;font-size:1.1rem;font-weight:100;height:30px;line-height:1.2}
.ltr .priceBox .desc{display:none;}
.priceBox .detail{padding:0.5em;text-align:initial;}
.priceBox .detail span{float:right;font-size:1.2em;}
.rtl .priceBox .detail span{float:left;}
.priceBox .count{display:none;}
.priceBox .discount{background-color:#50aacc;cursor:pointer;display:none;}
kbd{font-family:monospace;}


.cbox:hover, .cbox:active, .priceBox:hover, .priceBox:active
{
-webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.2), 0 0 30px rgba(0, 0, 0, 0.07) inset;
   -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.2), 0 0 30px rgba(0, 0, 0, 0.07) inset;
        box-shadow:0 1px 4px rgba(0, 0, 0, 0.2), 0 0 30px rgba(0, 0, 0, 0.07) inset;
}



.tbl.productList th{vertical-align: middle;text-align: center;}
.tbl.productList td{vertical-align: middle;text-align: center;padding:0.25em}
.tbl.productList tr td:nth-child(1){font-size: 0.8em;}
.tbl.productList tr td:nth-child(2){font-size: 0.9em;}
.tbl.productList .product{white-space:nowrap;min-width:250px;}
.tbl.productList input.count{white-space:nowrap;width:100px;padding:5px 0.5em;}

.tbl.productList .input.discountCn{width:120px;}
.tbl.productList .input.discountCn input.discount{padding:5px 0.5em;text-align:center;}
.tbl.productList .input.discountCn .addon.small{min-width:40px;max-width:45px;text-align:center;transition:0.3s;opacity:1}
.tbl.productList .input.discountCn .addon.small:empty{min-width:0;width:0;opacity:0;border-width:none;padding:0}

.tbl .min80{white-space:nowrap;width:80px}
.tbl .min100{white-space:nowrap;width:100px}
.tbl .min120{white-space:nowrap;width:120px}
.tbl .min150{white-space:nowrap;width:150px}

.finalPriceVal span{font-size: 2em;font-weight:bold;}


/* print style*/
@media screen{
  .printArea{background: #fff;box-shadow: 0 0.5mm 2mm rgba(0,0,0,.3);margin:0 auto;overflow: hidden;position: relative;box-sizing: border-box;page-break-after: always;}

  .printArea[data-size=A3]               { width: 297mm; height: 419mm }
  .printArea[data-size=A3.landscape]     { width: 420mm; height: 296mm }
  .printArea[data-size=A4]               { width: 210mm; height: 296mm }
  .printArea[data-size=A4.landscape]     { width: 297mm; height: 209mm }
  .printArea[data-size=A5]               { width: 148mm; height: 209mm }
  .printArea[data-size=A5.landscape]     { width: 210mm; height: 147mm }
  .printArea[data-size=letter]           { width: 216mm; height: 279mm }
  .printArea[data-size=letter.landscape] { width: 280mm; height: 215mm }
  .printArea[data-size=legal]            { width: 216mm; height: 356mm }
  .printArea[data-size=legal.landscape]  { width: 357mm; height: 215mm }
  .printArea[data-size=receipt8]         { width: 84mm;  padding:18mm 4mm 1mm }
}

.factor .storeDetail h1{font-weight: bold;font-size: 2em}
.factor .storeDetail address{font-style: normal;font-weight: 300;line-height: 1.5em;}
.factor .storeDetail address .phone{font-weight:bold}
.factor .storeDetail .logo img{width: 80px;height:auto;max-width:80px;max-height:80px;border-radius:3px;overflow:hidden;}
.factor .storeDetail .desc{line-height:1.5em}

.factor .factorDetail{padding-top:1em;border-top:2px solid #333}
.factor .factorDetail .datetime .time{font-weight:700}
.factor .factorDetail code{font-size: 1.5em;background-color:#eee;border-radius:3px;padding:3px 5px;min-width:50px;text-align:center;}
.factor .factorDetail .barcodePrev{height: 40px;width:140px;}
.factor .tbl{color:#000}
.factor .tbl thead th{border-bottom-color: #000;padding-top:1em;padding-bottom:1em; }
.factor .tbl tbody td{line-height:1.4em;}
.factor .tbl td{vertical-align: middle;}
.factor .tbl tfoot th{border-top:1px dotted #000;font-weight:bold}
/* ... */

